--- a/index.html
+++ b/index.html
@@ -5,11 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="styles.css" type="text/css">
-</head>
+    <link rel="stylesheet" href="styles.css"></head>
 <body>
-    <h1>I am index file</h1>
-
-    
+    <h1>I am index file..</h1>    
 </body>
 </html>
